# eval-nav

./: .gitignore  LICENSE  README.md  evaluation_result.json  pyproject.toml  setup.py
configs/: task-animal-nav.yaml  task-franka-mani-hl.yaml  task-humanoid-race.yaml  task-leatherback-waypointnav.yaml  task-spot-nav.yaml  task-spot-waypointnav.yaml
eval_nav/: __init__.py
eval_nav/core/: __init__.py  episode_runner.py  evaluator.py  reporter.py  scorer.py
eval_nav/core/scorers/: __init__.py
eval_nav/core/scorers/manipulation/: __init__.py  pick_place.py
eval_nav/core/scorers/navigation/: __init__.py  goal.py  humanoid.py  leatherback_maze.py  simple.py  waypoint.py
eval_nav/domain/: __init__.py  config.py  errors.py  metrics.py
eval_nav/managers/: __init__.py  env_manager.py
eval_nav/utils/: __init__.py  policy_loader.py  state_logger.py  task_checker.py
nav_eval/: __init__.py
nav_eval/core/: episode_runner.py  evaluator.py
nav_eval/domain/: __init__.py  config.py  errors.py  metrics.py
nav_eval/utils/: __init__.py  policy_loader.py  state_logger.py  success_checker.py
scripts/: evaluate.py
