[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-nav"
version = "0.1.0"
description = "Navigation Evaluation Framework for IsaacLab"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Nepher Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
]

[project.scripts]
eval-nav = "eval_nav.scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_nav*"]

